docs:разметить и стилизовать каталог

--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>GllasyShop</title>
 </head>
@@ -138,25 +135,26 @@
                 <button>Форма обратной связи</button>
             </div>
         </section>
+        <footer class="footer">
+            <ul class="social">
+                <li class="tviter"></li>
+                <li class="insta"></li>
+                <li class="fb"></li>
+                <li class="vk"></li>
+            </ul>
+            <div class="footer-menu">
+                <a href="#">Для поставщиков</a>
+                <a href="#">Наши документы</a>
+                <a href="#">О производстве</a>
+                <a href="#">Экологические стандарты</a>
+            </div>
+            <div class="made-in">
+                <img src="./img/logo-htmlacademy.svg" alt="лого HTML Academy">
+                <p>Сделано в <a href="#">HTML Academy</a> © 2019</p>
+            </div>
+        </footer>
     </div>
 </body>
-<footer class="footer">
-    <div class="social tvitter">
-        <div class="insta"></div>
-        <div class="fb"></div>
-        <div class="vk"></div>
-    </div>
-    <div class="footer-menu">
-        <a href="#">Для поставщиков</a>
-        <a href="#">Наши документы</a>
-        <a href="#">О производстве</a>
-        <a href="#">Экологические стандарты</a>
-    </div>
-    <div class="made-in">
-        <img src="./img/logo-htmlacademy.svg" alt="лого HTML Academy">
-        <p>Сделано в <a href="#">HTML Academy</a> © 2019</p>
-    </div>
-</footer>
 <section class="assortment">
     <ul class="assortment-menu">
         <li><a href="#">Новинки</a></li>
