--- a/catalog.html
+++ b/catalog.html
@@ -1,121 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./catalogstyle.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./catalogstyle.css" />
     <title>Catalog</title>
-</head>
-<body>
-   <div class="conteiner">
-       <header class="header">
-            <div class="logo">
-                <a href="#">
-                    <img src="./img/logo.png" alt="Логотип" width="154px" height="64px">
-                </a>
-            </div>
-            <nav class="nav">
-                <ul class="main-nav">
-                    <li><a href="#">Каталог</a></li>
-                    <li><a href="#">Доставка и оплата</a></li>
-                    <li><a href="#">О компании</a></li>
-                </ul>
-            </nav>
-            <div class="menu">
-                <ul class="user-menu">
-                    <li><button class="search"></button></li>
-                    <li><button class="input">Вход</button></li>
-                    <li><button class="basket">Пусто</button></li>
-                </ul>
-            </div>
-            <div class="time-to-work">
-                <p>С 10 до 20, ежедневно</p>
-                <p>8 812 450-25-25</p>
-            </div>
-       </header>
-       <main class="main">
-           <div class="goods">
-            <div class="item">
-                <img src="./img/lemon.png" alt="лимонное мороженое">
-                <p class="item-text">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-                <p class="item-cost">310₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div class="item">
-                <img src="./img/coffe.png" alt="кофейное мороженое">
-                <p class="item-text">Сливочно-кофейное с кусочками шоколада</p>
-                <p class="item-cost">380₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div class="item">
-                 <img src="./img/strawberry.png" alt="клубничное мороженое">
-                 <p class="item-text">Сливочно-клубничное с присыпкой из белого шоколада</p>
-                 <p class="item-cost">355₽<span class="kilogram">/кг</span></p>
-             </div>
-            <div class="item">
-                 <img src="./img/creme-brulee.png" alt="крем-брюле">
-                 <p class="item-text">Сливочное крем-брюле с карамельной подливкой</p>
-                 <p class="item-cost">415₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div  class="item">
-                 <img src="./img/21.png" alt="сливочное с брусничным джемом">
-                 <p class="item-text">Сливочное с брусничным джемом</p>
-                 <p class="item-cost">325₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div class="item">
-                <img src="./img/22.png" alt="сливочно-черничное с цельными ягодами">
-                <p class="item-text">Сливочно-черничное с цельными ягодами черники </p>
-                <p class="item-cost">410₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div class="item">
-                 <img src="./img/23.png" alt="сливочно-лимонное с карамельной присыпкой">
-                 <p class="item-text">Сливочно-лимонное с карамельной присыпкой</p>
-                 <p class="item-cost">375₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div class="item">
-                 <img src="./img/24.png" alt="сливочное с шоколадной стружкой">
-                 <p class="item-text">Сливочное с шоколадной стружкой</p>
-                 <p class="item-cost">320₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div class="item">
-                 <img src="./img/31.png" alt="сливочно-ванильное с кусочками шоколада">
-                 <p class="item-text">Сливочно-ванильное с кусочками шоколада</p>
-                 <p class="item-cost">440₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div class="item">
-                 <img src="./img/32.png" alt="сливочное с ментоловым сиропом">
-                 <p class="item-text">Сливочноe с ментоловым сиропом</p>
-                 <p class="item-cost">435₽<span class="kilogram">/кг</span></p>
-             </div>
-            <div class="item">
-                 <img src="./img/33.png" alt="сливочное с кусочками чёрного шоколада">
-                 <p class="item-text">Сливочное с кусочками черного шоколада</p>
-                 <p class="item-cost">355₽<span class="kilogram">/кг</span></p>
-            </div>
-            <div class="item">
-                 <img src="./img/34.png" alt="сливочное с мятным сиропом">
-                 <p class="item-text">Сливочное с мятным сиропом</p>
-                 <p class="item-cost">420₽<span class="kilogram">/кг</span></p>
-            </div>
-           </div>
-       </main>
-       <footer class="footer">
-            <ul class="social">
-                <li class="tviter"></li>
-                <li class="insta"></li>
-                <li class="fb"></li>
-                <li class="vk"></li>
-            </ul>
-            <div class="footer-menu">
-                <a href="#">Для поставщиков</a>
-                <a href="#">Наши документы</a>
-                <a href="#">О производстве</a>
-                <a href="#">Экологические стандарты</a>
-            </div>
-            <div class="made-in">
-                <img src="./img/logo-htmlacademy.svg" alt="лого HTML Academy">
-                <p>Сделано в <a href="#">HTML Academy</a> © 2019</p>
-            </div>
-       </footer>
-   </div>
-</body>
+  </head>
+  <body>
+    <div class="conteiner">
+      <header class="header">
+        <div class="logo">
+          <a href="#">
+            <img
+              src="./img/logo.png"
+              alt="Логотип"
+              width="154px"
+              height="64px"
+            />
+          </a>
+        </div>
+        <nav class="nav">
+          <ul class="main-nav">
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Доставка и оплата</a></li>
+            <li><a href="#">О компании</a></li>
+          </ul>
+        </nav>
+        <div class="menu">
+          <ul class="user-menu">
+            <li><button class="search"></button></li>
+            <li><button class="input">Вход</button></li>
+            <li><button class="basket">Пусто</button></li>
+          </ul>
+        </div>
+        <div class="time-to-work">
+          <p>С 10 до 20, ежедневно</p>
+          <p>8 812 450-25-25</p>
+        </div>
+      </header>
+      <main class="main">
+        <ul class="breadcrumbs">
+          <li><a href="./index.html">Главная</a></li>
+          <li><a href="./catalog.html">Каталог</a></li>
+          <li class="breadcrumbs-current">Сливочное</li>
+        </ul>
+        <section class="filter">
+          <h2>Сливочное мороженое</h2>
+          <form action="get">
+            <fieldset class="sort">
+              <legend>Сортировка:</legend>
+              <div class="sort-list">
+                <button class="sort-list-button">по популярности</button>
+              </div>
+            </fieldset>
+            <fieldset class="filter-item">
+              <legend>Цена: 100 руб. - 500 руб.</legend>
+              <div class="range-filter">
+                <div class="range-controls">
+                  <div class="scale">
+                    <div class="bar" style="width: 30%; margin-left: 20%"></div>
+                  </div>
+                  <div
+                    class="toggle toggle-min"
+                    tabindex="0"
+                    style="left: 20%"
+                  ></div>
+                  <div
+                    class="toggle toggle-max"
+                    tabindex="0"
+                    style="left: 45%"
+                  ></div>
+                </div>
+              </div>
+            </fieldset>
+            <fieldset class="fat">
+              <legend>Жирность:</legend>
+              <ul class="fat-list">
+                <li class="fat-list-option">
+                  <input
+                    type="radio"
+                    class="visually-hiden fat-list-radio"
+                    name="fat"
+                    id="fat-list-item-0"
+                  />
+                  <label for="fat-list-item-0">0%</label>
+                </li>
+                <li class="fat-list-option">
+                  <input
+                    type="radio"
+                    class="visually-hiden fat-list-radio"
+                    name="fat"
+                    id="fat-list-item-10"
+                  />
+                  <label for="fat-list-item-10">до 10%</label>
+                </li>
+                <li class="fat-list-option">
+                  <input
+                    type="radio"
+                    class="visually-hiden fat-list-radio"
+                    name="fat"
+                    id="fat-list-item-30"
+                  />
+                  <label for="fat-list-item-30">до 30%</label>
+                </li>
+                <li class="fat-list-option">
+                  <input
+                    type="radio"
+                    class="visually-hiden fat-list-radio"
+                    name="fat"
+                    id="fat-list-item-31"
+                  />
+                  <label for="fat-list-item-31">выше 30%</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="fillers">
+              <legend>Наполнители</legend>
+              <ul class="fillers-list">
+                <li class="fillers-list-item">
+                  <input
+                    type="checkbox"
+                    class="visually-hiden fillers-list-checkbox"
+                    name="fillers"
+                    id="fillers-list-choko"
+                  />
+                  <label for="fillers-list-choko">шоколадные</label>
+                </li>
+                <li class="fillers-list-item">
+                  <input
+                    type="checkbox"
+                    class="visually-hiden fillers-list-checkbox"
+                    name="fillers"
+                    id="fillers-list-sugar"
+                  />
+                  <label for="fillers-list-sugar">сахарные присыпки</label>
+                </li>
+                <li class="fillers-list-item">
+                  <input
+                    type="checkbox"
+                    class="visually-hiden fillers-list-checkbox"
+                    name="fillers"
+                    id="fillers-list-fruits"
+                  />
+                  <label for="fillers-list-fruits">фрукты</label>
+                </li>
+                <li class="fillers-list-item">
+                  <input
+                    type="checkbox"
+                    class="visually-hiden fillers-list-checkbox"
+                    name="fillers"
+                    id="fillers-list-syrop"
+                  />
+                  <label for="fillers-list-syrop">сиропы</label>
+                </li>
+                <li class="fillers-list-item">
+                  <input
+                    type="checkbox"
+                    class="visually-hiden fillers-list-checkbox"
+                    name="fillers"
+                    id="fillers-list-jam"
+                  />
+                  <label for="fillers-list-jam">джемы</label>
+                </li>
+              </ul>
+            </fieldset>
+            <button class="filter-button">Применить</button>
+          </form>
+        </section>
+        <div class="goods">
+          <div class="item">
+            <img src="./img/lemon.png" alt="лимонное мороженое" />
+            <p class="item-text">
+              Сливочное с апельсиновым джемом и цитрусовой стружкой
+            </p>
+            <p class="item-cost">310₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img src="./img/coffe.png" alt="кофейное мороженое" />
+            <p class="item-text">Сливочно-кофейное с кусочками шоколада</p>
+            <p class="item-cost">380₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img src="./img/strawberry.png" alt="клубничное мороженое" />
+            <p class="item-text">
+              Сливочно-клубничное с присыпкой из белого шоколада
+            </p>
+            <p class="item-cost">355₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img src="./img/creme-brulee.png" alt="крем-брюле" />
+            <p class="item-text">
+              Сливочное крем-брюле с карамельной подливкой
+            </p>
+            <p class="item-cost">415₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img src="./img/21.png" alt="сливочное с брусничным джемом" />
+            <p class="item-text">Сливочное с брусничным джемом</p>
+            <p class="item-cost">325₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img
+              src="./img/22.png"
+              alt="сливочно-черничное с цельными ягодами"
+            />
+            <p class="item-text">
+              Сливочно-черничное с цельными ягодами черники
+            </p>
+            <p class="item-cost">410₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img
+              src="./img/23.png"
+              alt="сливочно-лимонное с карамельной присыпкой"
+            />
+            <p class="item-text">Сливочно-лимонное с карамельной присыпкой</p>
+            <p class="item-cost">375₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img src="./img/24.png" alt="сливочное с шоколадной стружкой" />
+            <p class="item-text">Сливочное с шоколадной стружкой</p>
+            <p class="item-cost">320₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img
+              src="./img/31.png"
+              alt="сливочно-ванильное с кусочками шоколада"
+            />
+            <p class="item-text">Сливочно-ванильное с кусочками шоколада</p>
+            <p class="item-cost">440₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img src="./img/32.png" alt="сливочное с ментоловым сиропом" />
+            <p class="item-text">Сливочноe с ментоловым сиропом</p>
+            <p class="item-cost">435₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img
+              src="./img/33.png"
+              alt="сливочное с кусочками чёрного шоколада"
+            />
+            <p class="item-text">Сливочное с кусочками черного шоколада</p>
+            <p class="item-cost">355₽<span class="kilogram">/кг</span></p>
+          </div>
+          <div class="item">
+            <img src="./img/34.png" alt="сливочное с мятным сиропом" />
+            <p class="item-text">Сливочное с мятным сиропом</p>
+            <p class="item-cost">420₽<span class="kilogram">/кг</span></p>
+          </div>
+        </div>
+      </main>
+      <footer class="footer">
+        <ul class="social">
+          <li class="tviter"></li>
+          <li class="insta"></li>
+          <li class="fb"></li>
+          <li class="vk"></li>
+        </ul>
+        <div class="footer-menu">
+          <a href="#">Для поставщиков</a>
+          <a href="#">Наши документы</a>
+          <a href="#">О производстве</a>
+          <a href="#">Экологические стандарты</a>
+        </div>
+        <div class="made-in">
+          <img src="./img/logo-htmlacademy.svg" alt="лого HTML Academy" />
+          <p>Сделано в <a href="#">HTML Academy</a> © 2019</p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
